修改年度数据分析

--- a/report/06-aqi-gamm.Rmd
+++ b/report/06-aqi-gamm.Rmd
@@ -521,15 +521,16 @@ mapply(function(i, y) {
 
 作为比较的基准，首先建立线性回归模型，结果如表 \@ref(tab:tab-lm-y) 所示。由
 表 \@ref(tab:tab-lm-y) 可知，在筛选出的变量中，废气治理完成投资额、平均风速、
-供暖、临海这四个变量在5%的显著性水平下通过显著性检验，且其系数分别为1.1121、
--9.2522、-16.8303、14.9104，说明废气治理完成投资额、临海对年均AQI呈正向影响，
-而平均风速、供暖对年均AQI呈负向影响。也就是说，在其他变量保持不变的条件下，
-废气治理完成投资额越多，年均AQI越大，空气质量越差；平均风速越大，年均AQI越小，
-空气质量越好；平均来讲，供暖地区比不供暖地区年均AQI小16.8303，而临海地区比不
-临海地区年均AQI大14.9104。但从我们的假设可知，废气治理完成投资额越多，空气
-质量应该越好，供暖地区比不供暖地区空气质量差，临海地区比不临海地区空气质量好。
-因此，在线性回归模型中，废气污染治理完成投资额、是否供暖、是否临海的系数符号
-与我们预期的不一致。
+供暖、临海、纬度这五个变量在10%的显著性水平下通过显著性检验，且其系数分别为
+1.1121、-9.2522、14.9104、-16.8303、1.8383，说明废气治理完成投资额、供暖、
+纬度对年均AQI呈正向影响，而平均风速、临海对年均AQI呈负向影响。也就是说，在
+其他变量保持不变的条件下，废气治理完成投资额越多，年均AQI越大，空气质量越差；
+平均风速越大，年均AQI越小，空气质量越好；平均来讲，供暖地区比不供暖地区年均
+AQI大14.9104，而临海地区比不临海地区年均AQI小16.8303；纬度越高的地方，年均
+AQI越大，空气质量越差。但根据我们的认知，废气治理完成投资额越多，空气质量
+应该越好。在这里，我们可以做出如下解释，目前废气治理完成投资额不足，当空气
+污染严重时，才增加更多投资来缓解空气污染。因此，在线性回归模型中，在一定时间
+内，废气污染治理完成投资额越多，空气污染越严重。
 
 ```{r tab-lm-y, eval=T, results='markup'}
 rm(list=ls())
@@ -605,14 +606,16 @@ knitr::kable(moran.g.lm, row.names =T, align = c("r", "r", "r", "r"),
 #### 线性混合效应模型
 
 之后将城市作为随机效应建立线性混合模型，对空气质量影响因素进行分析。拟合结果如
-表 \@ref(tab:tab-lme-y) 所示。由表 \@ref(tab:tab-lme-y) 可以看出，在5%的显著性
-水平下，废气治理完成投资额、平均风速、平均气压、是否供暖通过显著性检验，且其系
-数分别为0.5005、-11.6601、0.1529、-15.8228。表明在其他变量保持不变的条件下，废气
-治理完成投资额越多，月均AQI越大，空气质量越差；平均风速越大，年均AQI越小，空气
-质量越好；平均气压越大，年均AQI越大，空气质量越差；平均来讲，供暖地区比不供暖
-地区的年均AQI小15.8228。同样，在线性混合模型中，废气治理完成投资额、是否供暖与
-年均AQI之间关系的符号与我们预期的不一致。同时，城市作为随机效应，其截距项的标准
-差为11.328，说明不同城市其年均AQI存在一定的差异。且其残差项也不存在空间自相关。
+表 \@ref(tab:tab-lme-y) 所示。由表 \@ref(tab:tab-lme-y) 可以看出，在10%的显著性
+水平下，私人汽车拥有量、废气治理完成投资额、降水量、平均风速、平均气压、是否临海
+通过显著性检验，且其系数分别为-0.0371、0.5005、-0.0056、-11.6601、0.1529、-15.8228。
+表明在其他变量保持不变的条件下，私人汽车拥有量越多，年均AQI越小，空气质量越好；
+废气治理完成投资额越多，年均AQI越大，空气质量越差；降水量越多，年均AQI越小，空气
+质量越好；平均风速越大，年均AQI越小，空气质量越好；平均气压越大，年均AQI越大，
+空气质量越差；平均来讲，临海地区比不临海地区的年均AQI小15.8228。同样，在线性
+混合模型中，废气治理完成投资额与年均AQI之间关系的符号仍然是正的，与线性回归模型
+结论一致，可以做出类似的解释。同时，城市作为随机效应，其截距项的标准差为11.328，
+说明不同城市其年均AQI存在一定的差异。且其残差项也不存在空间自相关。
 
 ```{r tab-lme-y, eval=T, results='markup'}
 rm(list=ls())
@@ -655,14 +658,20 @@ knitr::kable(lme.y.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 由之前变量筛选的结果可知，固定资产投资额、平均气温与年均AQI之间存在非线性相关
 关系。进一步建立半参数回归模型，结果如表 \@ref(tab:tab-gam-y) 所示。由
-表 \@ref(tab:tab-gam-y) 可知，在5%的显著性水平下，废气治理完成投资额、平均风速、
-是否供暖、是否临海对年均AQI存在显著影响，其系数分别为0.5149、-11.0720、-11.9634、
-13.6271。表明在其他变量保持不变的条件下，废气污染治理完成投资额越多，年均AQI越大，
-空气质量越差；平均风速越大，年均AQI越小，空气质量越好；平均来讲，供暖地区比不供
-暖地区的年均AQI少11.9634，而临海地区比不临海地区的年均AQI大13.6271。供暖、临海
-这两个变量的符号与我们的预期不同。且图 \@ref(fig:fig-gam-y) 中显示了固定资产投资额、
-汽车拥有量和平均气温的拟合曲线，阴影部分表示95%的置信区间。同时由表 \@ref(tab:tab-gam-y-smooth) 可知，在5%的显著性水平下，固定资产投资额、平均气温通过显著性检验，而私人汽车拥有量
-未通过显著性检验。
+表 \@ref(tab:tab-gam-y) 可知，在10%的显著性水平下，废气治理完成投资额、平均风速、
+是否供暖、是否临海、纬度对年均AQI存在显著影响，其系数分别为0.5149、-11.0720、
+13.6271、-11.9634、1.6734。表明在其他变量保持不变的条件下，废气污染治理完成投资
+额越多，年均AQI越大，空气质量越差；平均风速越大，年均AQI越小，空气质量越好；
+平均来讲，供暖地区比不供暖地区的年均AQI大13.6271，而临海地区比不临海地区的
+年均AQI少11.9634；纬度越高的地方年均AQI越大，其空气质量越差。且图 \@ref(fig:fig-gam-y) 中
+显示了固定资产投资额、汽车拥有量和平均气温的拟合曲线，阴影部分表示95%的置信区间。
+同时由表 \@ref(tab:tab-gam-y-smooth) 可知，在10%的显著性水平下，固定资产投资额、
+平均气温通过显著性检验，而私人汽车拥有量未通过显著性检验，表明固资产投资额、平均
+气温对年均AQI存在非线性影响。由图 \@ref(fig:fig-gam-y) 可以发现，年均AQI随固定资产
+投资的增加呈下降-增加-下降的变动趋势，具体来讲，固定资产投资在2000亿元之前年均AQI
+下降较快，其在2000-9000亿元之间年均AQI缓慢上升，固定资产投资在9000亿元之后年均AQI
+有更快程度的下降。表明固定资产投资额在达到一定程度之后，空气质量会逐渐变好。且整体
+来讲，年均AQI随着平均气温的增加而增加，但15℃之前增加较快，之后缓慢增长。
 
 ```{r tab-gam-y, eval=T, results='markup'}
 rm(list=ls())
@@ -750,14 +759,19 @@ knitr::kable(gam.smooth.tab.y, row.names =T, align = c("c", "c", "c", "c"),
 #### 半参数混合效应模型
 
 进一步建立半参数混合效应模型，同样以城市作为随机效应，其拟合结果如表 \@ref(tab:tab-gamm-y) 
-所示。由表 \@ref(tab:tab-gamm-y) 可知，在5%的显著性水平下，废气治理完成投资额、平均风速、
-平均气压、是否供暖通过显著性检验，且其系数分别为0.4189、-13.511、0.1343、-10.0546。表明
-在其他条件不变的前提下，废气治理完成投资额越多，年均AQI越大，空气质量越差；平均风速越大，
-年均AQI越小，空气质量越好；平均气压越大，年均AQI越大，空气质量越差；平均来讲，供暖地区比
-不供暖地区的年均AQI小，空气质量好。同样是否供暖的符号与我们预期不同。图 \@ref(fig:fig-gamm-y) 
-显示了半参数混合效应模型的非参数曲线，其非参数项为固定资产投资额、汽车拥有量和平均气温，
-且由表 \@ref(tab:tab-gamm-y-smooth) 的非参数项显著性检验可知，在5%的显著性水平下，只有
-平均气温通过显著性检验。
+所示。由表 \@ref(tab:tab-gamm-y) 可知，在10%的显著性水平下，废气治理完成投资额、平均相对湿度、
+平均风速、平均气压、是否临海通过显著性检验，且其系数分别为0.4189、-0.4982、-13.511、0.1343、
+-10.0546。表明在其他条件不变的前提下，废气治理完成投资额越多，年均AQI越大，空气质量越差；
+平均相对湿度越大，年均AQI越小，空气质量越好；平均风速越大，年均AQI越小，空气质量越好；
+平均气压越大，年均AQI越大，空气质量越差；平均来讲，临海地区比不临海地区的年均AQI小，空气
+质量好。图 \@ref(fig:fig-gamm-y) 显示了半参数混合效应模型的非参数曲线，其非参数项为固定
+资产投资额、汽车拥有量和平均气温，且由表 \@ref(tab:tab-gamm-y-smooth) 的非参数项显著性
+检验可知，在10%的显著性水平下，私人汽车拥有量和平均气温通过显著性检验，表明私人汽车拥有
+量和平均气温对年均AQI存在非线性影响。且从图 \@ref(fig:fig-gamm-y) 可以看出，年均AQI随
+私人汽车拥有量的下降而下降，而我们预期私人汽车拥有量越多，空气质量越差，这与我们的预期
+不一致。同时，平均气温在15℃之前年均AQI随平均气温的增加而增加，在15℃之后，年均AQI随平均气
+温的增加而下降，这与半参数回归模型中的结果不一致。
+
 
 ```{r tab-gamm-y, eval=T, results='markup'}
 rm(list=ls())
@@ -848,30 +862,39 @@ knitr::kable(gamm.smooth.tab.y, row.names =T, align = c("c", "c", "c", "c"),
 上述分析中，我们选取年均AQI作为因变量，基于lasso筛选出的变量为自变量，分别
 建立线性回归模型、线性混合效应模型、半参数回归模型和半参数混合效应模型对空
 气质量的影响因素进行分析。根据以上分析结果可知，在线性回归模型中，显著的变
-量有废气治理完成投资额、平均风速、是否供暖、是否临海，模型的AIC、BIC值分别
-为1089.159、1127.4；在线性混合效应模型中，显著的变量有废气治理完成投资额、
-平均风速、平均气压、是否供暖，AIC、BIC值分别为1064.311、1104.24；在半参数
-回归模型中，显著的变量有废气治理完成投资额、平均风速、是否供暖、是否临海、
-固定资产投资、平均气温，AIC、BIC值分别为1049.803、1107.445；在半参数混合效
-应模型中，显著的变量有废气治理完成投资额、平均风速、平均气压、是否供暖、平均
-气温，AIC、BIC值分别为1019.786，1068.271。根据以上结果，从AIC、BIC值可以看出
-半参数混合效应模型最好，但是从模型变量来讲，结合之前的分析及我们的预期，这些
-模型并未真正表明筛选出的变量与年均AQI之间的关系。
+量有废气治理完成投资额、平均风速、是否供暖、是否临海、纬度，模型的AIC、BIC
+值分别为1089.159、1127.4；在线性混合效应模型中，显著的变量有私人汽车拥有量、
+废气治理完成投资额、降水量、平均风速、平均气压、是否临海，AIC、BIC值分别为
+1064.311、1104.24；在半参数回归模型中，显著的变量有废气治理完成投资额、平均
+风速、是否供暖、是否临海、纬度、固定资产投资、平均气温，AIC、BIC值分别为
+1049.803、1107.445；在半参数混合效应模型中，显著的变量有废气治理完成投资额、
+平均相对湿度、平均风速、平均气压、是否临海、私人汽车拥有量、平均气温，AIC、
+BIC值分别为1019.786，1068.271。根据以上结果，从AIC、BIC值可以看出半参数混合
+效应模型最好，但是从模型变量来讲，结合之前的分析及我们的预期，这些模型尚未
+很好地表明变量与年均AQI之间的关系。
 
-进一步选取上述所有模型中显著的变量，以年均AQI为因变量，废气治理完成投资额、
-平均风速、是否供暖、是否临海、纬度、固定资产投资、汽车拥有量、平均气温为
-自变量建立半参数回归模型，结果如表 \@ref(tab:tab-gam-y-best) 所示。由
-表 \@ref(tab:tab-gam-y-best) 可知，在5%的显著性水平下，废气治理完成投资额、
-平均风速、是否供暖、是否临海、纬度均通过显著性检验，且其系数分别为0.5289、
--10.1325、-12.5379、15.7729、2.5147。表明在其他条件不变的情况下，废气治理
-完成投资额越多，年均AQI越大，空气质量越差；平均风速越大，年均AQI越小，空气
-质量越好；平均来讲，供暖地区比不供暖的年均AQI小12.5379，临海地区比不临海地区
-的年均AQI大15.7729；且纬度越高的地方年均AQI越大，空气质量越差。图 \@ref(fig:fig-gam-y-best) 
-表明了固定资产投资、汽车拥有量、平均气温的非参数曲线，且从表 \@ref(tab:tab-gam-y-smooth-best) 
-中可以看出，在5%的显著性水平下，固定资产投资、平均气温通过显著性检验，说明这两个
-变量对空气质量有非线性影响。进一步对残差进行空间自相关检验，检验结果如
-表 \@ref(tab:tab-gam-y-res-spatial) 。从表 \@ref(tab:tab-gam-y-res-spatial) 中
-可以看出，残差不存在空间自相关。
+进一步选取上述所有模型中显著的变量，考虑实际情况，以年均AQI为因变量，废气
+治理完成投资额、平均风速、是否供暖、是否临海、纬度、固定资产投资、汽车拥有量、
+平均气温为自变量建立半参数回归模型，结果如表 \@ref(tab:tab-gam-y-best) 所示。
+由表 \@ref(tab:tab-gam-y-best) 可知，在10%的显著性水平下，废气治理完成投资额、
+平均风速、是否供暖、是否临海、纬度、固定资产投资额、私人汽车拥有量、平均气温
+均通过显著性检验，且参数项系数分别为0.5289、-10.1325、15.7729、-12.5379、2.5147。
+表明在其他条件不变的情况下，废气治理完成投资额越多，年均AQI越大，空气质量越差；
+平均风速越大，年均AQI越小，空气质量越好；平均来讲，供暖地区比不供暖的年均AQI大
+15.7729，临海地区比不临海地区的年均AQI小12.5379；且纬度越高的地方年均AQI越大，
+空气质量越差。图 \@ref(fig:fig-gam-y-best) 表明了固定资产投资、汽车拥有量、
+平均气温的非参数曲线，且从表 \@ref(tab:tab-gam-y-smooth-best) 中可以看出，
+在10%的显著性水平下，固定资产投资额、私人汽车拥有量、平均气温均对空气质量有
+非线性影响。且从图 \@ref(fig:fig-gam-y-best) 中可以看出，年均AQI随固定资产投资
+呈现下降-上升-下降的趋势，固定资产投资在2500亿元之前，年均AQI随固定资产投资的
+增加而下降，在2500-9000亿元之间时，年均AQI随固定资产投资的增加而增加，9000亿元
+之后，年均AQI随固定资产投资的增加快速下降。同时，年均AQI随私人汽车拥有量的增加
+呈现出缓慢增加之后再缓慢下降的趋势。私人汽车拥有量在200万辆之前，年均AQI随私人
+汽车拥有量的增加而缓慢增加，几乎没什么大的变化，在200万辆之后，年均AQI随私人
+汽车拥有量的增加而缓慢下降。平均气温与非参数回归模型中的结果保持一致，在15℃之
+前，年均AQI随平均气温的增加增加较快，平均气温在15℃之后，年均AQI随平均气温的增加
+而缓慢增加。进一步对残差进行空间自相关检验，检验结果如表 \@ref(tab:tab-gam-y-res-spatial) 。
+从表 \@ref(tab:tab-gam-y-res-spatial) 中可以看出，残差不存在空间自相关。
 
 ```{r tab-gam-y-best, eval=T, results='markup'}
 rm(list=ls())
